# Lox

./: .gitignore  CMakeLists.txt  Cargo.toml  makefile  readme.md
bytecode/: makefile
bytecode/src/: main.c  scanner.h  token.c  token.h
bytecode/tests/: test_scanner.cpp
examples/: control_flow.lox  fibonacci_recursion.lox  for_loop.lox  function.lox  hello_world.lox  while_loop.lox
include/lox/: core.h  declarations.h  environment.h  error.h  expr.h  fileloc.h  filelocation.h  interpreter.h  lox.h  object.h  parser.h  scanner.h  stmt.h  token.h
include/tools/: array.h  astprinter.h  debug.h  error.h  fileloc.h  hashmap.h  hashtable.h  utils.h
lox/include/: termcolor.h
lox/include/lox/: astprinter.h  declarations.h  error.h  expr.h  literal.h  lox.h  parser.h  scanner.h  state.h  token.h  types.h  utils.h
lox/src/: astprinter.c  error.c  expr.c  literal.c  lox.c  main.c  main.cpp  object.c  parser.c  scanner.c  state.c  token.c  utils.c
lox/src/lox/: declarations.h  expr.h  literal.h  object.h
lox/tests/: test_literal.cpp  test_scanner.cpp  test_token.cpp  test_utils.cpp
src/: ast.rs  environment.rs  error.rs  function.rs  interpreter.rs  lib.rs  lox.rs  main.c  main.rs  object.rs  parser.rs  readme.md  scanner.rs  source_location.rs  syntax.rs  token.rs
src/lox/: environment.c  error.c  expr.c  fileloc.c  interpreter.c  lox.c  object.c  parser.c  scanner.c  stmt.c  token.c
src/tools/: array.c  astprinter.c  debug.c  error.c  fileloc.c  hashmap.c  hashtable.c  utils.c
tests/: test_environment.cpp  test_environment.rs  test_expr.cpp  test_fileloc.cpp  test_hashmap.cpp  test_hashtable.cpp  test_interprer.cpp  test_interpreter.rs  test_object.cpp  test_parser.cpp  test_parser.rs  test_scanner.cpp  test_scanner.rs  test_token.cpp  test_utils.cpp
treewalker/: CMakeLists.txt  makefile
treewalker/src/: astprinter.c  astprinter.h  erroc.c  error.h  expr.c  expr.h  main.c  scanner.c  scanner.h  token.c  token.h
treewalker/tests/: test_scanner.cpp  test_token.cpp
utils/src/: strutils.c  strutils.h
utils/tests/: test_utils.cpp
